Show Title on homepage

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: home
 author_profile: true
 header:
     overlay_image: "/assets/images/home-hero-background.jpg"
-    show_overlay_title: false
+    show_overlay_title: true
 ---
