--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ author_profile: true
 header:
     overlay_image: "/assets/images/home-hero-background.jpg"
     show_overlay_title: true
+    title: Minjae's Blog
 ---
