--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@ layout: home
 author_profile: true
 header:
     overlay_image: "/assets/images/home-hero-background.jpg"
-    show_overlay_title: true
-    title: Minjae's Blog
+    show_overlay_title: false
 ---
