--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ author_profile: true
 title: "Minjae's Blog"
 header:
     overlay_image: "/assets/images/home-hero-background.jpg"
-    show_overlay_title: true
+    show_overlay_title: false
 ---
