--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 ---
-layout: home
+layout: archive
 author_profile: true
 header:
     overlay_image: "/assets/images/home-hero-background.jpg"
     show_overlay_title: false
 ---
+
+{% include base_path %}
+
+{% capture written_year %}'None'{% endcapture %}
+{% for post in site.posts %}
+  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+  {% if year != written_year %}
+    <h2 id="{{ year | slugify }}" class="archive__subtitle"><a href="#{{ year | slugify }}">#{{ year }}</a></h2>
+    {% capture written_year %}{{ year }}{% endcapture %}
+  {% endif %}
+  {% include archive-single.html %}
+{% endfor %}
