--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 ---
+title: Minjae Kim's Tech and Other Stuff Blog
 layout: archive
 author_profile: true
 header:
     overlay_image: "/assets/images/home-hero-background.jpg"
-    show_overlay_title: false
+    show_overlay_title: true
+    hide_h1: true
 ---
 
 {% include base_path %}
