--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Minjae Kim's Tech and Other Stuff Blog
+title: Minjae Kim’s Life in Tech Blog
 layout: archive
 author_profile: true
 header:
